2010-05-06  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        Rework where we get page step and line step from, so we do not
        depend on scrollbars existing. Caught by API test I forgot to run.

        * platform/gtk/ScrollViewGtk.cpp:
        (WebCore::ScrollView::setGtkAdjustments):

2010-05-06  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        [GTK] Adjustment resetting uses wrong values, and misses page_size and steps
        https://bugs.webkit.org/show_bug.cgi?id=38657

        Fix resetting adjustment values. In the page cache case, we were
        confusing page_size and upper, leading to stray scrollbars
        sometimes.

        * platform/gtk/ScrollViewGtk.cpp:
        (WebCore::ScrollView::setGtkAdjustments):

2010-05-06  Darin Adler  <darin@apple.com>

        Reviewed by Beth Dakin.

        Page::setCanStartMedia does not properly handle the case where a media listener is removed
        https://bugs.webkit.org/show_bug.cgi?id=38602

        We can't find any real case where this causes a crash at this time, but
        we want to harden the code anyway. Thus there are no new regression tests.

        * page/Page.cpp:
        (WebCore::Page::removeMediaCanStartListener): Removed incorrect assertion.
        (WebCore::Page::setCanStartMedia): Change algorithm so we notify listeners
        one at a time and don't notify any listener that has already been removed
        from the set.

2010-05-05  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Darin Adler.

        shift+click on an existing selection doesn't work right
        https://bugs.webkit.org/show_bug.cgi?id=36542

        NSTextView behavior is to move the end of the selection
        closest to the shift-click. Win/Linux behavior is to always
        move the focus end of the selection.

        Test: editing/selection/shift-click.html

        * page/EventHandler.cpp: